--- a/classification/low_incidence_binary_classification.Rmd
+++ b/classification/low_incidence_binary_classification.Rmd
@@ -130,7 +130,7 @@ The problem is that we have a high success right but no successful positive pred
 ## Other Methods for Examining Model Fit and Accuracy 
 
 ```{r}
-# some extra notes and techniques inspired by analytic day
+# some extra notes and techniques inspired by analytics day
 # info from  http://ethen8181.github.io/machine-learning/unbalanced/unbalanced.html
 library(InformationValue)
 library(pROC)
@@ -138,28 +138,91 @@ library(partykit)
 library(ggthemes)
 library(pscl) # for pR2 function
 
+pR2(logit_fit) # McFadden Pseudo R Squared
+
+
+
+
 # prediction testing 
 prediction_train <- predict(logit_fit, newdata = training, type = "response" )
-predictions_train_full <- data.frame(prediction_train, training$high_qual_flag)
+predictions_train_full <- data.frame(prediction = prediction_train, high_qual_flag = training$high_qual_flag)
 
 prediction_test <- predict(logit_fit, newdata = testing, type = "response" )
-predictions_test_full <- data.frame(prediction_test, testing$high_qual_flag)
+predictions_test_full <- data.frame(prediction = prediction_test, high_qual_flag = testing$high_qual_flag)
 
 # distribution of the prediction score grouped by known outcome
-ggplot(predictions_train_full, aes(prediction_train, color = as.factor(training.high_qual_flag) ) ) + 
+ggplot(predictions_train_full, aes(prediction_train, color = as.factor(training$high_qual_flag) ) ) + 
 geom_density( size = 1 ) +
 ggtitle( "Training Set's Predicted Score" ) + 
 scale_color_economist( name = "data", labels = c( "negative", "positive" ) ) + 
 theme_economist()
 
 # distribution of the prediction score grouped by known outcome
-ggplot(predictions_test_full, aes(prediction_test, color = as.factor(testing.high_qual_flag) ) ) + 
+ggplot(predictions_test_full, aes(prediction_test, color = as.factor(testing$high_qual_flag) ) ) + 
 geom_density( size = 1 ) +
 ggtitle( "Testing Set's Predicted Score" ) + 
 scale_color_economist( name = "data", labels = c( "negative", "positive" ) ) + 
 theme_economist()
 
-pR2(logit_fit) # McFadden Pseudo R Squared
+  
+  
+  
+
+# code to find the optimal cutoff  
+# functions are sourced in, to reduce document's length
+source("useful_logit_functions.R")
+  
+# prediction testing setup
+prediction_train <- predict(logit_fit, newdata = training, type = "response" )
+predictions_train_full <- data.frame(prediction = prediction_train, high_qual_flag = training$high_qual_flag)
+
+prediction_test <- predict(logit_fit, newdata = testing, type = "response" )
+predictions_test_full <- data.frame(prediction = prediction_test, high_qual_flag = testing$high_qual_flag)
+
+# using function AccuracyCutoffInfo to test for optimal cutoff visually
+accuracy_info <- AccuracyCutoffInfo(train = predictions_train_full, 
+                                    test = predictions_test_full, 
+                                    predict = "prediction", 
+                                    actual = "high_qual_flag",
+                                    cut_val_start = 0.01,
+                                    cut_val_end = 0.9,
+                                    by_step_size = 0.001)
+
+accuracy_info$plot
+
+
+# Moving on To Using ROC Curves to pintpoint optimal cutoffs
+
+# user-defined different cost for false negative and false positive
+# here the assumption is that a false positive is 1/10th as costly as a false negative
+cost_fp <- 10
+cost_fn <- 100
+
+roc_info <- ROCInfo(data = predictions_test_full, 
+                    predict = "prediction", 
+                    actual = "high_qual_flag", 
+                    cost.fp = cost_fp, 
+                    cost.fn = cost_fn )
+
+```
+
+```{r fig2, fig.height = 4, fig.width = 6, fig.align = "center"}
+grid.draw(roc_info$plot)
+```
+
+```{r}
+# visualize a particular cutoff (lowest point of the previous plot)
+cm_info <- ConfusionMatrixInfo(data = predictions_test_full, 
+                               predict = "prediction", 
+                               actual = "high_qual_flag", 
+                               cutoff = .12)
+
+# shows what this information looks like
+print(cm_info$data)
+
+# prints the chart
+cm_info$plot
+
 ```
 
 
@@ -195,6 +258,85 @@ head(up_logit_fit_predictions)
 caret::confusionMatrix(up_logit_fit_predictions,testing$high_qual_flag, positive='1')
 
 ```
+
+```{r}
+# condensed verison of model performance metrics for up-sampled model
+
+pR2(up_logit_fit) # McFadden Pseudo R Squared
+
+# prediction testing for up-sampled logit
+prediction_train <- predict(up_logit_fit, newdata = training, type = "response" )
+predictions_train_full <- data.frame(prediction = prediction_train, high_qual_flag = training$high_qual_flag)
+
+prediction_test <- predict(up_logit_fit, newdata = testing, type = "response" )
+predictions_test_full <- data.frame(prediction = prediction_test, high_qual_flag = testing$high_qual_flag)
+
+# distribution of the prediction score grouped by known outcome
+ggplot(predictions_train_full, aes(prediction_train, color = as.factor(training$high_qual_flag) ) ) + 
+geom_density( size = 1 ) +
+ggtitle( "Training Set's Predicted Score" ) + 
+scale_color_economist( name = "data", labels = c( "negative", "positive" ) ) + 
+theme_economist()
+
+# distribution of the prediction score grouped by known outcome
+ggplot(predictions_test_full, aes(prediction_test, color = as.factor(testing$high_qual_flag) ) ) + 
+geom_density( size = 1 ) +
+ggtitle( "Testing Set's Predicted Score" ) + 
+scale_color_economist( name = "data", labels = c( "negative", "positive" ) ) + 
+theme_economist()
+
+# code to find the optimal cutoff  
+# functions are sourced in, to reduce document's length
+source("useful_logit_functions.R")
+
+# using function AccuracyCutoffInfo to test for optimal cutoff visually
+accuracy_info <- AccuracyCutoffInfo(train = predictions_train_full, 
+                                    test = predictions_test_full, 
+                                    predict = "prediction", 
+                                    actual = "high_qual_flag",
+                                    cut_val_start = 0.01,
+                                    cut_val_end = 0.9,
+                                    by_step_size = 0.001)
+
+accuracy_info$plot
+
+
+# Moving on To Using ROC Curves to pintpoint optimal cutoffs
+
+# user-defined different cost for false negative and false positive
+# here the assumption is that a false positive is 1/10th as costly as a false negative
+cost_fp <- 10
+cost_fn <- 100
+
+roc_info <- ROCInfo(data = predictions_test_full, 
+                    predict = "prediction", 
+                    actual = "high_qual_flag", 
+                    cost.fp = cost_fp, 
+                    cost.fn = cost_fn )
+
+```
+
+```{r fig3, fig.height = 4, fig.width = 6, fig.align = "center"}
+grid.draw(roc_info$plot)
+```
+
+```{r}
+# visualize a particular cutoff (lowest point of the previous plot)
+cm_info <- ConfusionMatrixInfo(data = predictions_test_full, 
+                               predict = "prediction", 
+                               actual = "high_qual_flag", 
+                               cutoff = .99)
+
+# shows what this information looks like
+print(cm_info$data)
+
+# prints the chart
+cm_info$plot
+
+```
+
+
+
 
 ## Trying SMOTE
 
