--- a/classification/low_incidence_binary_classification.Rmd
+++ b/classification/low_incidence_binary_classification.Rmd
@@ -226,8 +226,7 @@ cm_info$plot
 ```
 
 
-
-
+# Now moving on to the upsampled model
 
 ```{r}
 up_train <- caret::upSample(select(training, -high_qual_flag), training$high_qual_flag)
@@ -265,14 +264,14 @@ caret::confusionMatrix(up_logit_fit_predictions,testing$high_qual_flag, positive
 pR2(up_logit_fit) # McFadden Pseudo R Squared
 
 # prediction testing for up-sampled logit
-prediction_train <- predict(up_logit_fit, newdata = training, type = "response" )
-predictions_train_full <- data.frame(prediction = prediction_train, high_qual_flag = training$high_qual_flag)
+prediction_train <- predict(up_logit_fit, newdata = up_train, type = "response" )
+predictions_train_full <- data.frame(prediction = prediction_train, high_qual_flag = up_train$Class)
 
 prediction_test <- predict(up_logit_fit, newdata = testing, type = "response" )
 predictions_test_full <- data.frame(prediction = prediction_test, high_qual_flag = testing$high_qual_flag)
 
 # distribution of the prediction score grouped by known outcome
-ggplot(predictions_train_full, aes(prediction_train, color = as.factor(training$high_qual_flag) ) ) + 
+ggplot(predictions_train_full, aes(prediction_train, color = as.factor(up_train$Class) ) ) + 
 geom_density( size = 1 ) +
 ggtitle( "Training Set's Predicted Score" ) + 
 scale_color_economist( name = "data", labels = c( "negative", "positive" ) ) + 
@@ -345,7 +344,7 @@ library(DMwR)
 
 # both upsampling and downsampling via SMOTE
 smote_train <- DMwR::SMOTE(high_qual_flag ~ ., data=as.data.frame(training))
-table(smote_train$high_qual_flag)
+janitor::tabyl(smote_train$high_qual_flag)
 
 # logistic regression built using smote data
 smote_logit_fit <- glm(high_qual_flag ~ . -quality, 
@@ -368,6 +367,112 @@ head(smote_logit_fit_predictions)
 
 caret::confusionMatrix(smote_logit_fit_predictions,testing$high_qual_flag, positive='1')
 ```
+
+
+```{r}
+# now trimming Smote
+
+smote_logit_fit <- glm(high_qual_flag ~ . -quality-residual_sugar-density-fixed_acidity-free_sulfur_dioxide-total_sulfur_dioxide, 
+                 data = smote_train, 
+                 family = binomial)
+
+summary(smote_logit_fit)
+```
+
+```{r}
+# building a vector of probabilties that a certain wine is high quality 
+smote_logit_fit_probs <- predict(smote_logit_fit,
+                           newdata = testing,
+                           type = "response")
+
+head(smote_logit_fit_probs)
+
+# building a vector of labels for high quality vs. not high quality 
+smote_logit_fit_predictions <- factor(ifelse(smote_logit_fit_probs > 0.5, 1, 0),levels=c('0','1'))
+head(smote_logit_fit_predictions)
+
+caret::confusionMatrix(smote_logit_fit_predictions,testing$high_qual_flag, positive='1')
+
+```
+
+```{r}
+# condensed verison of model performance metrics for up-sampled model
+
+pR2(smote_logit_fit) # McFadden Pseudo R Squared
+
+# prediction testing for up-sampled logit
+prediction_train <- predict(smote_logit_fit, newdata = smote_train, type = "response" )
+predictions_train_full <- data.frame(prediction = prediction_train, high_qual_flag = smote_train$high_qual_flag)
+
+prediction_test <- predict(smote_logit_fit, newdata = testing, type = "response" )
+predictions_test_full <- data.frame(prediction = prediction_test, high_qual_flag = testing$high_qual_flag)
+
+# distribution of the prediction score grouped by known outcome
+ggplot(predictions_train_full, aes(prediction_train, color = as.factor(smote_train$high_qual_flag) ) ) + 
+geom_density( size = 1 ) +
+ggtitle( "Training Set's Predicted Score" ) + 
+scale_color_economist( name = "data", labels = c( "negative", "positive" ) ) + 
+theme_economist()
+
+# distribution of the prediction score grouped by known outcome
+ggplot(predictions_test_full, aes(prediction_test, color = as.factor(testing$high_qual_flag) ) ) + 
+geom_density( size = 1 ) +
+ggtitle( "Testing Set's Predicted Score" ) + 
+scale_color_economist( name = "data", labels = c( "negative", "positive" ) ) + 
+theme_economist()
+
+# code to find the optimal cutoff  
+# functions are sourced in, to reduce document's length
+source("useful_logit_functions.R")
+
+# using function AccuracyCutoffInfo to test for optimal cutoff visually
+accuracy_info <- AccuracyCutoffInfo(train = predictions_train_full, 
+                                    test = predictions_test_full, 
+                                    predict = "prediction", 
+                                    actual = "high_qual_flag",
+                                    cut_val_start = 0.01,
+                                    cut_val_end = 0.9,
+                                    by_step_size = 0.001)
+
+accuracy_info$plot
+
+
+# Moving on To Using ROC Curves to pintpoint optimal cutoffs
+
+# user-defined different cost for false negative and false positive
+# here the assumption is that a false positive is 1/10th as costly as a false negative
+cost_fp <- 10
+cost_fn <- 100
+
+roc_info <- ROCInfo(data = predictions_test_full, 
+                    predict = "prediction", 
+                    actual = "high_qual_flag", 
+                    cost.fp = cost_fp, 
+                    cost.fn = cost_fn )
+
+```
+
+
+```{r fig4, fig.height = 4, fig.width = 6, fig.align = "center"}
+grid.draw(roc_info$plot)
+```
+
+```{r}
+# visualize a particular cutoff (lowest point of the previous plot)
+cm_info <- ConfusionMatrixInfo(data = predictions_test_full, 
+                               predict = "prediction", 
+                               actual = "high_qual_flag", 
+                               cutoff = .99)
+
+# shows what this information looks like
+print(cm_info$data)
+
+# prints the chart
+cm_info$plot
+
+```
+
+
 
 ## Now trying ROSE
 
